--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dependency-graph": "^1.0.0",
     "edge.js": "^6.2.1",
     "express": "^5.0.1",
+    "express-rate-limit": "^7.5.0",
+    "express-slow-down": "^2.0.3",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "minimist": "^1.2.8",
