--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-slow-down": "^2.0.3",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "joi": "^17.13.3",
     "minimist": "^1.2.8",
     "ms": "^2.1.3",
     "picocolors": "^1.1.1",
