--- a/cli/template/config/default.json5
+++ b/cli/template/config/default.json5
@@ -1,17 +1,68 @@
 {
-  src: {
-    path: 'src'
+  src: 'app',
+  port: 8000,
+
+  name: 'Expresso App',
+  domain: 'example.com',
+
+  proxy: {
+    trust: [
+      'loopback'
+    ]
   },
+
+  static: {
+    paths: [{
+      path: 'public',
+      prefix: '/public'
+    }]
+  },
+
   logs: {
     path: 'logs'
   },
+
   data: {
     path: 'data'
   },
-  server: {
-    port: 8000
+
+  http: {
+    body: {
+      format: 'json',
+      limit: '10kb'
+    }
   },
-  parser: {
-    format: 'json'
+
+  session: {
+    store: false,
+    age: '7d'
+  },
+
+  models: {
+    store: 'sqlite'
+  },
+
+  views: {
+    engine: 'liquid'
+  },
+
+  jobs: {
+    adapter: 'better-queue'
+  },
+
+  emails: {
+    provider: false
+  },
+
+  services: {
+    auth: {
+      enabled: false,
+      sender: 'accounts@example.com'
+    },
+
+    sqlite: {
+      enabled: false,
+      package: 'sqlite3'
+    }
   }
 }
