--- a/cli/template/config/development.json5
+++ b/cli/template/config/development.json5
@@ -4,6 +4,15 @@
     console: true,
     request: true
   },
+
+  models: {
+    path: 'models-dev.db',
+    sync: {
+      force: true,
+      alter: true
+    }
+  },
+  
   views: {
     cache: false
   }
