--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@untydev/expresso",
   "version": "0.0.1",
-  "description": "Batteries included server framework built on Express.js",
+  "description": "Yet another framework built on top of Express.js",
   "type": "module",
   "bin": "cli/cli.js",
   "main": "lib/lib.js",
+  "engines": {
+    "node": ">=23.11.0"
+  },
   "scripts": {
     "lint": "standard"
   },
@@ -19,26 +22,35 @@
   "author": "Untydev <npm@unty.dev>",
   "license": "MIT",
   "dependencies": {
+    "@untydev/options": "^1.1.0",
+    "@untydev/props": "^1.0.0",
     "@untydev/types": "^1.2.0",
+    "bcrypt": "^5.1.1",
     "better-queue": "^3.8.12",
     "better-queue-sqlite": "^1.0.7",
-    "better-sqlite3": "^11.9.1",
     "config": "^3.3.12",
     "cookie-session": "^2.1.0",
     "dependency-graph": "^1.0.0",
-    "edge.js": "^6.2.1",
     "express": "^5.0.1",
     "express-rate-limit": "^7.5.0",
     "express-slow-down": "^2.0.3",
+    "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "joi": "^17.13.3",
+    "liquidjs": "^10.21.0",
     "minimist": "^1.2.8",
+    "mjml": "^4.15.3",
     "ms": "^2.1.3",
     "picocolors": "^1.1.1",
+    "resend": "^4.3.0",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7",
+    "ulid": "^3.0.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "better-sqlite3": "^11.9.1",
     "standard": "^17.1.2"
   }
 }
