--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^5.0.1",
     "express-rate-limit": "^7.5.0",
     "express-slow-down": "^2.0.3",
+    "glob": "^11.0.1",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
@@ -42,6 +43,7 @@
     "minimist": "^1.2.8",
     "mjml": "^4.15.3",
     "ms": "^2.1.3",
+    "ora": "^8.2.0",
     "picocolors": "^1.1.1",
     "resend": "^4.3.0",
     "sequelize": "^6.37.7",
