Add more control over cookie session configuration

--- a/cli/templates/basic/config/default.json5
+++ b/cli/templates/basic/config/default.json5
@@ -36,7 +36,8 @@
   },
   session: {
     store: 'cookie',
-    age: '7d'
+    maxAge: '7d',
+    sameSite: 'strict'
   },
   models: {
     store: 'sqlite'
